--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -54,4 +54,5 @@ dependencies {
   implementation "com.google.android.gms:play-services-base:$googlePlayServicesVersion"
   implementation "com.google.android.gms:play-services-maps:$googlePlayServicesMapsVersion"
   implementation "com.google.maps.android:android-maps-utils:$androidMapsUtilsVersion"
+  implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
 }
